<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <EditText
        android:id="@+id/initText"
        style="@style/EntryField"
        android:layout_weight="1"
        android:text="@string/initial_text" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="4"
            android:orientation="horizontal"
            tools:context=".MainActivity">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnC"
                style="@style/ButtonCalculatorPrimary"
                android:text="@string/C" />

            <androidx.appcompat.widget.AppCompatImageButton
                style="@style/ButtonCalculatorPrimary"
                android:src="@drawable/ic_baseline_backspace_24" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/stepBack"
                style="@style/ButtonCalculatorPrimary"
                android:text="@string/percent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/divide"
                style="@style/ButtonCalculatorSecondary"
                android:layout_gravity="center"
                android:text="@string/divide" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/seven"
                style="@style/ButtonCalculatorPrimary"
                android:text="@string/seven" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/eight"
                style="@style/ButtonCalculatorPrimary"
                android:text="@string/eight" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nine"
                style="@style/ButtonCalculatorPrimary"
                android:text="@string/nine" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/multiply"
                style="@style/ButtonCalculatorSecondary"
                android:text="@string/multiply" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/four"
                style="@style/ButtonCalculatorPrimary"
                android:text="@string/four" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/five"
                style="@style/ButtonCalculatorPrimary"
                android:text="@string/five" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/six"
                style="@style/ButtonCalculatorPrimary"
                android:text="@string/six" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/minus"
                style="@style/ButtonCalculatorSecondary"
                android:text="@string/minus" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/one"
                style="@style/ButtonCalculatorPrimary"
                android:text="@string/one" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/two"
                style="@style/ButtonCalculatorPrimary"
                android:text="@string/two" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/three"
                style="@style/ButtonCalculatorPrimary"
                android:text="@string/three" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/plus"
                style="@style/ButtonCalculatorSecondary"
                android:text="@string/plus" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/ButtonCalculatorPrimary"
                android:clickable="false" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/zero"
                style="@style/ButtonCalculatorPrimary"
                android:text="@string/zero" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dot"
                style="@style/ButtonCalculatorPrimary"
                android:text="@string/dot" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/equals"
                style="@style/ButtonEquals"
                android:text="@string/equals" />

        </GridLayout>
    </LinearLayout>
</LinearLayout>
